@@ -1,5 +1,9 @@
 2019-09-13  Wilco Dijkstra  <wdijkstr@arm.com>
 
+	* string/memmem.c (__memmem): Rewrite to improve performance.
+
+2019-06-12  Wilco Dijkstra  <wdijkstr@arm.com>
+
 	* string/str-two-way.h (two_way_short_needle): Add inline to avoid
 	warning.
 	(two_way_long_needle): Block inlining.
